Add stack listing
